# ml-phases-ising

./: CMakeLists.txt  README.md  data_gen.cpp  machine_learning.ipynb  machine_learning.py
data/square/L10/: lattices.pt  magnetizations.pt  temperatures.pt
data/square/L20/: lattices.pt  magnetizations.pt  temperatures.pt
data/square/L30/: lattices.pt  magnetizations.pt  temperatures.pt
data/square/L40/: lattices.pt  magnetizations.pt  temperatures.pt
data/square/L60/: lattices.pt  magnetizations.pt  temperatures.pt
data/triangular/L10/: lattices.pt  magnetizations.pt  temperatures.pt
data/triangular/L20/: lattices.pt  magnetizations.pt  temperatures.pt
data/triangular/L30/: lattices.pt  magnetizations.pt  temperatures.pt
data/triangular/L40/: lattices.pt  magnetizations.pt  temperatures.pt
data/triangular/L60/: lattices.pt  magnetizations.pt  temperatures.pt
